--- a/index.html
+++ b/index.html
@@ -4,110 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Red Wine Radio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #652A6A;
-            color: #FFFFFF;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-
-        .player-container {
-            width: 100%;
-            max-width: 900px;
-            background-color: #652A6A;
-            border-radius: 20px;
-            padding: 20px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-            text-align: center;
-        }
-
-        .player-logo img {
-            width: 120px;
-            height: auto;
-            margin-bottom: 15px;
-            border-radius: 8px;
-        }
-
-        .player-controls {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 15px;
-        }
-
-        .play-pause-btn {
-            background-color: transparent;
-            border: none;
-            cursor: pointer;
-            outline: none;
-        }
-
-        .play-icon {
-            width: 50px;
-            height: 50px;
-        }
-
-        .volume-control {
-            display: flex;
-            align-items: center;
-            color: #FFFFFF;
-            font-size: 14px;
-            margin-left: 20px;
-        }
-
-        .volume-control input[type="range"] {
-            width: 200px;
-            margin-left: 10px;
-        }
-
-        .track-info {
-            margin-top: 15px;
-            font-size: 18px;
-            color: #FFFFFF;
-            text-align: center;
-        }
-
-        .external-links {
-            margin-top: 15px;
-            text-align: right;
-        }
-
-        .external-links img {
-            width: 30px;
-            height: auto;
-            margin: 0 10px;
-            cursor: pointer;
-        }
-
-        .player-background {
-            background-color: #4B2456;
-            padding: 20px;
-            border-radius: 10px;
-            position: relative;
-        }
-
-        .player-background::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.2);
-            border-radius: 10px;
-            z-index: -1;
-        }
-
-        #audio-player {
-            display: none;
-        }
-
-    </style>
+    <link rel="stylesheet" href="style1.css"> <!-- Подключаем файл стилей -->
 </head>
 <body>
 
@@ -125,7 +22,7 @@
 
             <div class="player-controls">
                 <button class="play-pause-btn" id="play-btn">
-                    <img src="https://raw.githubusercontent.com/red-wine-radio/red-wine-radio.github.io/main/play-icon.png" alt="Play" class="play-icon">
+                    <img src="https://img.icons8.com/color/48/000000/play--v1.png" alt="Play" class="play-icon">
                 </button>
 
                 <div class="volume-control">
@@ -155,12 +52,12 @@
         playBtn.addEventListener('click', () => {
             if (!isPlaying) {
                 audioPlayer.play();
-                playBtn.innerHTML = '<img src="https://raw.githubusercontent.com/red-wine-radio/red-wine-radio.github.io/main/pause-icon.png" alt="Pause" class="play-icon">';
+                playBtn.innerHTML = '<img src="https://img.icons8.com/color/48/000000/pause--v1.png" alt="Pause" class="play-icon">';
                 trackInfo.textContent = 'Playing Red Wine Radio...';
                 isPlaying = true;
             } else {
                 audioPlayer.pause();
-                playBtn.innerHTML = '<img src="https://raw.githubusercontent.com/red-wine-radio/red-wine-radio.github.io/main/play-icon.png" alt="Play" class="play-icon">';
+                playBtn.innerHTML = '<img src="https://img.icons8.com/color/48/000000/play--v1.png" alt="Play" class="play-icon">';
                 trackInfo.textContent = 'Paused';
                 isPlaying = false;
             }
