--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Red Wine Radio</title>
-    <link rel="stylesheet" href="/css/style1.css"> <!-- Подключаем файл стилей -->
+    <link rel="stylesheet" href="/css/style.css"> <!-- Подключаем файл стилей -->
 </head>
 <body>
 
