--- a/index.html
+++ b/index.html
@@ -4,46 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Red Wine Radio</title>
-    <link rel="stylesheet" href="/css/style1.css?v=1.1">
+
+    <!-- Подключаем Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
-    <div class="player-container">
-        <div class="player-background">
-            <div class="player-logo">
-                <img src="https://raw.githubusercontent.com/red-wine-radio/red-wine-radio.github.io/main/RWR600.jpg" alt="Red Wine Radio Logo">
-            </div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8 text-center">
+                <div class="player-logo mt-5">
+                    <img src="https://raw.githubusercontent.com/red-wine-radio/red-wine-radio.github.io/main/RWR600.jpg" alt="Red Wine Radio Logo" class="img-fluid rounded-circle" style="max-width: 150px;">
+                </div>
+                <h1 class="mt-4">Red Wine Radio</h1>
 
-            <h2>Red Wine Radio</h2>
+                <div class="player-controls mt-4">
+                    <button class="btn btn-primary btn-lg mr-3" id="play-btn">Play</button>
+                    <button class="btn btn-secondary btn-lg" id="pause-btn">Pause</button>
+                </div>
 
-            <div class="track-info">
-                <p id="track-info">Playing Red Wine Radio 00:00</p>
-            </div>
-
-            <div class="player-controls">
-                <button class="play-pause-btn" id="play-btn">
-                    <img src="https://img.icons8.com/color/48/000000/play--v1.png" alt="Play" class="play-icon">
-                </button>
-
-                <div class="volume-control">
+                <div class="volume-control mt-4">
                     <label for="volume">Volume</label>
-                    <input type="range" id="volume" min="0" max="1" step="0.1" value="0.8">
+                    <input type="range" id="volume" min="0" max="1" step="0.1" value="0.8" class="form-control-range" style="width: 200px; display: inline;">
+                </div>
+
+                <div class="track-info mt-4">
+                    <p id="track-info">Playing Red Wine Radio 00:00</p>
+                </div>
+
+                <!-- Ссылки для внешних плееров -->
+                <div class="external-links mt-4">
+                    <a href="https://stream.zeno.fm/pcbduafehg0uv.m3u" download class="btn btn-outline-light">Save Stream (M3U)</a>
+                    <a href="vlc://https://stream.zeno.fm/pcbduafehg0uv" class="btn btn-outline-light">Open in VLC</a>
                 </div>
             </div>
-
-            <div class="external-links">
-                <a href="https://stream.zeno.fm/pcbduafehg0uv.m3u" download><img src="https://img.icons8.com/material-outlined/24/ffffff/download.png" alt="Download"></a>
-                <a href="vlc://https://stream.zeno.fm/pcbduafehg0uv"><img src="https://img.icons8.com/color/48/000000/vlc.png" alt="Open in VLC"></a>
-                <a href="https://tunein.com/radio/Red-Wine-Radio-s315646/"><img src="https://img.icons8.com/color/48/000000/tunein.png" alt="TuneIn"></a>
-            </div>
         </div>
-
-        <audio id="audio-player" src="https://stream.zeno.fm/pcbduafehg0uv" preload="auto"></audio>
     </div>
+
+    <!-- Аудио плеер -->
+    <audio id="audio-player" src="https://stream.zeno.fm/pcbduafehg0uv" preload="auto"></audio>
+
+    <!-- Скрипты Bootstrap и зависимости -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.6/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <script>
         const audioPlayer = document.getElementById('audio-player');
         const playBtn = document.getElementById('play-btn');
+        const pauseBtn = document.getElementById('pause-btn');
         const volumeControl = document.getElementById('volume');
         const trackInfo = document.getElementById('track-info');
         let isPlaying = false;
@@ -52,26 +61,21 @@
         playBtn.addEventListener('click', () => {
             if (!isPlaying) {
                 audioPlayer.play();
-                playBtn.innerHTML = '<img src="https://img.icons8.com/color/48/000000/pause--v1.png" alt="Pause" class="play-icon">';
                 trackInfo.textContent = 'Playing Red Wine Radio...';
                 isPlaying = true;
-            } else {
-                audioPlayer.pause();
-                playBtn.innerHTML = '<img src="https://img.icons8.com/color/48/000000/play--v1.png" alt="Play" class="play-icon">';
-                trackInfo.textContent = 'Paused';
-                isPlaying = false;
             }
+        });
+
+        pauseBtn.addEventListener('click', () => {
+            audioPlayer.pause();
+            trackInfo.textContent = 'Paused';
+            isPlaying = false;
         });
 
         // Volume control
         volumeControl.addEventListener('input', function () {
             audioPlayer.volume = this.value;
         });
-
-        // Auto play (set to false by default)
-        audioPlayer.autoplay = false;
-
     </script>
-
 </body>
 </html>
