--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Подключаем Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style1.css">
 </head>
 <body>
 
