--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
     
                 <!-- Кнопка Play -->
                 <button class="play-btn" id="play-btn">
-                    <img src="img/play.png" alt="Play" id="play-icon" />
+                    <div class="image-container">
+                        <img src="img/play.png" alt="Play" id="play-icon" />
+                    </div>
                 </button>
             </div>
         </div>
