--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <div class="social-icons">
                     <a href="https://www.facebook.com/RedWineOnAir/"><img src="img/facebook.png"  alt="Facebook"></a>
                     <a href="https://www.instagram.com/redwineradio/"><img src="img/instagram.png" alt="Instagram"></a>
+                    <a href="https://stream.zeno.fm/pcbduafehg0uv.m3u"><img src="img/download.png" alt="m3u"></a>
                 </div>
     
                 <!-- Кнопка Play -->
