--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
                 <div class="track-info">
                     <span id="song-info">Loading track info...</span> 
                 </div>
+                <h4>Track History</h4>
+                <!-- Контейнер для истории треков -->
+                <div class="history-list">
+                    <!-- Здесь будет появляться история треков после добавления -->
+                </div>
             </div>
     
             <!-- Правая часть: Социальные сети, кнопка Play, On Air -->
