--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="player-content">
                 <!-- Левая часть: Название станции, Онлайн Live Stream, громкость, время -->
                 <div class="left-section">
-                    <h1>Red Wine Radio</h1>
+                    <h1>Red Wine Radio 🍷</h1>
         
                     <!-- Контрол громкости -->
                     <div class="volume-control mt-4">
