--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <!-- Подключение скрипта для работы плеера -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.5.1/nouislider.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/telegram.js"></script>
 </body>
 
 </html>
