--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                     <div class="social-icons">
                         <a href="https://www.facebook.com/RedWineOnAir/"><img src="img/facebook.png"  alt="Facebook"></a>
                         <a href="https://www.instagram.com/redwineradio/"><img src="img/instagram.png" alt="Instagram"></a>
+                        <a href="https://t.me/redwine_radio" class="telegram-link">
+                            <img src="img/telegram.png" alt="Telegram" class="telegram-img" id="telegram-img">
+                            <span class="telegram-text">@rwradio_bot</span>
+                        </a>
                         <a href="https://stream.zeno.fm/pcbduafehg0uv.m3u"><img src="img/download.png" alt="m3u"></a>
                     </div>
         
