add donate link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="right-section">
                     <!-- Социальные сети -->
                     <div class="social-icons">
-                        <a href="https://www.facebook.com/RedWineOnAir/"><img src="img/facebook.png"  alt="Facebook"></a>
+                        <a href="https://pay.oxapay.com/12316214" target="_blank" rel="noopener noreferrer"><img src="img/donate-100.png"  alt="Donate"></a>
                         <a href="https://www.instagram.com/redwineradio/"><img src="img/instagram.png" alt="Instagram"></a>
                         <a href="https://t.me/redwine_radio" class="telegram-link">
                             <img src="img/telegram.png" alt="Telegram" class="telegram-img" id="telegram-img">
