--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
                     <h1>Red Wine Radio 🍷</h1>
         
                     <!-- Контрол громкости -->
-                    <div class="volume-control mt-4">
-                        <i class="fa fa-volume-up"></i> <!-- Иконка громкости -->
-                        <div id="volume-slider" class="mt-4"></div>
+                    <div class="volume-wrapper">
+                        <div class="volume-control mt-4">
+                            <i class="fa fa-volume-up"></i> <!-- Иконка громкости -->
+                            <div id="volume-slider" class="mt-4"></div>
+                        </div>
                     </div>
 
                     <div class="track-info">
