add html  now playing in tg

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <!-- Контрол громкости -->
                     <div class="volume-wrapper">
                         <div class="volume-control mt-4">
+                            <span class="volume-label">Now Playing:</span>
                             <i class="fa fa-volume-up"></i> <!-- Иконка громкости -->
                             <div id="volume-slider" class="mt-4"></div>
                         </div>
