--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
 
                 <!-- Блок текущего трека + кнопка Play -->
                 <div class="current-track">
-                    <span id="song-info">Loading track info...</span>
+                    <div id="song-info">
+                        <div class="marquee">Loading track info...</div>
+                    </div>
                     <button class="play-btn" id="play-btn">
                         <div class="image-container">
                             <img src="img/play.png" alt="Play" id="play-icon" />
