--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest" defer></script>
     <script src="https://telegram.org/js/telegram-web-app.js" defer></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-      gtag('config', 'G-Y8NT9FB34M');
+        gtag('config', 'G-Y8NT9FB34M');
     </script>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Red Wine Radio Player</title>
     <!-- <link rel="stylesheet" href="css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="css/styles.css">
