upd track animation

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- <link rel="stylesheet" href="css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.5.1/nouislider.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -48,7 +49,7 @@
 
                 <!-- Название станции -->
                 <div class="station-name">
-                    <h1>Red Wine Radio 🍷</h1>
+                    <h1>Red Wine Radio <span id="wine-emoji">🍷</span></h1>
                 </div>
 
                 <!-- Блок текущего трека + кнопка Play -->
